--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cards",
-  "homepage": "https://bubbybabur.github.io/Cards",
+  "homepage": "http://bubbybabur.github.io/Cards",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,6 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "firebase": "^8.2.6",
-    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
